# gbemu

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  nightly.yml  publish.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: bus.rs  lib.rs  machine.rs  tests.rs
core/src/cartridge/: headers.rs  mapper.rs  mbc1.rs  mod.rs  rom_only.rs
core/src/cpu/: cpu_bus.rs  decoder.rs  decoder_test.rs  display.rs  instruction.rs  instruction_test.rs  mod.rs  register.rs
core/src/debug/: breakpoint.rs
core/src/joypad/: joypad_bus.rs  mod.rs
core/src/ppu/: mod.rs  mode.rs  ppu_bus.rs  sprite.rs
core/src/timer/: mod.rs  timer_bus.rs
desktop/: Cargo.toml
desktop/src/: app.rs  main.rs  theme.rs
desktop/src/style/: container.rs  mod.rs  text.rs
desktop/src/views/: mod.rs  view_cpu.rs  view_memory.rs  view_registers.rs
desktop/src/widgets/: mod.rs  screen.rs
doctor/: .gitignore  Cargo.toml  run-gameboy-doctor.sh  run-sm83.sh  settings.inc  setup.sh
src/: .rustfmt.toml  bus.rs  lib.rs  machine.rs  main.rs
src/cpu/: addressing_mode.rs  decoder.rs  decoder_test.rs  display.rs  instruction.rs  mod.rs  register.rs
term/: Cargo.toml
term/src/: main.rs  screen_view.rs
