[package]
name = "gbemu-iced"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gbemu-core = { path = "../core" }

env_logger = "0.11"
dotenv = "0.15"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
font-kit = "0.14"
rfd = "0.15"

iced = { version = "0.13", features = ["canvas", "tokio"] }
iced_aw = { version = "0.12", default-features = false, features = ["menu", "grid"] }