[package]
name = "doctor"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gbemu-core = { path = "../core", features = ["test-bus"] }

env_logger = "0.11"
dotenv = "0.15"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"

[[bin]]
name = "gameboy-doctor"

[[bin]]
name = "sm83-doctor"